--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "bootstrap": "3.3.6",
     "jquery": "2.2.3",
     "react": "15.0.2",
+    "react-bootstrap": "^0.31.0",
     "react-dom": "15.0.2",
     "react-redux": "4.4.5",
+    "react-responsive-carousel": "^3.1.15",
     "react-router": "2.4.0",
     "react-router-redux": "4.0.4",
     "redux": "3.5.2",
